gcc/testsuite/rust/rustc/ui/error-codes/E0718.rs
#![feature(lang_items)]

// Box is expected to be a struct, so this will error.
#[lang = "owned_box"] // { dg-error ".E0718." "" { target *-*-* } }
static X: u32 = 42;

fn main() {}

